iniciando consumo da api

--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
 
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script src="/public/scripts/carousel.js"></script>
-        <script src="/public/scripts/swipe.js"></script>
+        <script src="/public/scripts/function.js"></script>
 
 </body>
 
